[gd_scene load_steps=13 format=2]

[ext_resource path="res://Prefabs/chr.tscn" type="PackedScene" id=1]
[ext_resource path="res://Prefabs/weapon.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/boss/anonimus.gd" type="Script" id=3]
[ext_resource path="res://Sounds/boss/anonimus/voice2.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/boss/anonimus/voice8.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/boss/anonimus/voice7.wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/boss/anonimus/voice4.wav" type="AudioStream" id=7]
[ext_resource path="res://Sounds/boss/anonimus/voice3.wav" type="AudioStream" id=8]
[ext_resource path="res://Sounds/boss/anonimus/voice6.wav" type="AudioStream" id=9]
[ext_resource path="res://Sounds/boss/anonimus/voice1.wav" type="AudioStream" id=10]
[ext_resource path="res://Sounds/boss/anonimus/voice5.wav" type="AudioStream" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18.125, 32.25 )

[node name="anonimus" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="chr" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 13 )
character = 3
chr_name = 2

[node name="weapon" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 13 )

[node name="to_shoot" type="Timer" parent="."]
process_mode = 0
wait_time = 2.3
one_shot = true

[node name="voice1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -10.0
bus = "Dialogs"

[node name="voice2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
bus = "Dialogs"

[node name="voice3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0
bus = "Dialogs"

[node name="voice4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
bus = "Dialogs"

[node name="voice5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -10.0
bus = "Dialogs"

[node name="voice6" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0
bus = "Dialogs"

[node name="voice7" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0
bus = "Dialogs"

[node name="voice8" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
bus = "Dialogs"

[node name="random_voice" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="hurtTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
one_shot = true
[connection signal="timeout" from="to_shoot" to="." method="_on_to_shoot_timeout"]
[connection signal="timeout" from="random_voice" to="." method="_on_random_voice_timeout"]
[connection signal="timeout" from="hurtTimer" to="." method="_on_hurtTimer_timeout"]
